[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Heart.png" type="Texture" id=1]
[ext_resource path="res://Assets/Boss/00 - Stage - game over loop.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Fonts/prstart.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/node_fsm_plugin/fsm_node.gd" type="Script" id=5]
[ext_resource path="res://MainScript.gd" type="Script" id=6]
[ext_resource path="res://UI/UI.gd" type="Script" id=7]
[ext_resource path="res://Weapons.gd" type="Script" id=8]
[ext_resource path="res://Weapons/PlasmaCannon/PlasmaCannonState.gd" type="Script" id=9]
[ext_resource path="res://Weapons/EmptyWeaponState.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.121569, 0.529412, 0.223529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.890196, 0.894118, 0.901961, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.133333, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.12549, 0.133333, 0.141176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/blur_amount = 1.618

[sub_resource type="DynamicFont" id=11]
size = 39
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.12549, 0.133333, 0.141176, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=13]
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 5
extra_spacing_space = 5
font_data = ExtResource( 3 )

[node name="MainScene" type="Node"]
script = ExtResource( 6 )

[node name="WeaponsService" type="Node" parent="."]
script = ExtResource( 8 )

[node name="FSM" type="Node" parent="WeaponsService"]
script = ExtResource( 5 )

[node name="PlasmaCannon" type="Node" parent="WeaponsService/FSM"]
script = ExtResource( 9 )

[node name="Empty" type="Node" parent="WeaponsService/FSM"]
script = ExtResource( 10 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 7 )

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="UI/PanelContainer"]
margin_left = 5.0
margin_top = 7.0
margin_right = 45.0
margin_bottom = 21.0
text = "00:00"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 150.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 140.0
margin_bottom = 90.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 52.0

[node name="left" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 28.0
margin_right = 27.0
margin_bottom = 52.0
focus_mode = 0
size_flags_vertical = 8
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
text = "a"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 61.0
margin_bottom = 52.0

[node name="Top" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 30.0
margin_bottom = 24.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
text = "w"

[node name="Bottom" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 30.0
margin_bottom = 52.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
text = "s"

[node name="Right" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_top = 28.0
margin_right = 93.0
margin_bottom = 52.0
focus_mode = 0
size_flags_vertical = 8
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
text = "d"

[node name="PanelContainer2" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 130.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/PanelContainer2"]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "Hold"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprintIndicator" type="Button" parent="UI/MarginContainer/VBoxContainer/PanelContainer2"]
margin_left = 34.0
margin_right = 72.0
margin_bottom = 24.0
focus_mode = 0
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
action_mode = 0
button_mask = 0
enabled_focus_mode = 0
text = "Shift"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/MarginContainer/VBoxContainer/PanelContainer2"]
margin_left = 76.0
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
text = "to Sprint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -123.0
margin_bottom = 42.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer2"]
margin_top = 10.0
margin_right = 113.0
margin_bottom = 42.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer2/VBoxContainer"]
margin_right = 113.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="UI/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 32 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart2" type="TextureRect" parent="UI/MarginContainer2/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_right = 74.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 32 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart3" type="TextureRect" parent="UI/MarginContainer2/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 78.0
margin_right = 113.0
margin_bottom = 32.0
rect_min_size = Vector2( 35, 32 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="PanelContainer" parent="UI"]
pause_mode = 2
visible = false
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen"]
margin_left = 336.0
margin_top = 265.0
margin_right = 687.0
margin_bottom = 335.0
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen/HBoxContainer"]
margin_right = 351.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 11 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Restart" type="Button" parent="UI/GameOverScreen/HBoxContainer"]
margin_top = 44.0
margin_right = 351.0
margin_bottom = 70.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 13 )
text = "RESTART"

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="UI/GameOverScreen"]
stream = ExtResource( 2 )
attenuation = 0.307786

[node name="GameTimer" type="Timer" parent="UI"]
autostart = true

[node name="Level1" parent="." instance_placeholder="res://Levels/Level1.tscn"]
[connection signal="pressed" from="UI/GameOverScreen/HBoxContainer/Restart" to="UI" method="_on_Restart_pressed"]
[connection signal="timeout" from="UI/GameTimer" to="UI" method="_on_GameTimer_timeout"]
